# Terminal_fable

./: README.md  native-terminal-reproducible-development-plan.md  pyproject.toml
agent_terminal/: __init__.py  native_terminal.py  tui_navigation.py
docs/: README.md  architecture.md  default-terminal-setup.md  developer-guide.md  extending.md  native-terminal-mvp.md
docs/decisions/: 0001-delegate-terminal-emulation-to-vte.md  0002-custom-layout-widget.md  0003-pure-gtk-free-core.md  README.md
packaging/: agent-terminal-native.desktop  install.sh
tests/: test_native_terminal.py  test_tui_navigation.py
